Remove EventParticipant, update tests.